--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>test</module>
+        <module>branch</module>
     </modules>
 
     <properties>
